fixed mouse event issue where mouse events did not work after modifying datalist, appended list to parent() of input instead of body, this fixes issues where position is distorted by parent positioning

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,9 @@ input {
 .datalist li {
 	padding: 3px;
 	font: 13px "Lucida Grande", Sans-Serif;
+	text-align: left;
+	color: black;
+	cursor: pointer;
 }
 .datalist li.active {
 	background: #3875d7;
